--- a/templates/Base.html
+++ b/templates/Base.html
@@ -62,6 +62,12 @@
                             Role Model
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="location" href="{% url 'ShowData' %}">
+                            <i class="bi bi-person-heart text-danger"></i>
+                            Show Data
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
