--- a/templates/Base.html
+++ b/templates/Base.html
@@ -64,7 +64,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="location" href="{% url 'ShowData' %}">
-                            <i class="bi bi-person-heart text-danger"></i>
+                            <i class="bi bi-bar-chart-steps text-light"></i>
                             Show Data
                         </a>
                     </li>
